fixed padding for main on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -137,7 +137,7 @@ nav {
 .main {
   display: flex;
   flex-direction: column;
-  padding: 80px 10px 30px;
+  padding: 30px 10px 30px;
   text-align: center;
   align-items: center;
 }
